[package]
name = "restream"
version = "0.1.0"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
license = "GPL-2.0-or-later"

[dependencies]
bytes = "0.4.6"
tokio = { git="https://github.com/tokio-rs/tokio" }
tokio-io = { git="https://github.com/tokio-rs/tokio" }
futures = "0.1.18"
pretty_env_logger = "0.1"
structopt = "0.2"
